added endpoint for getting forex rates
