# internal/frankfurter/responses.go
@@ -1,0 +1,8 @@
+package frankfurter
+
+type Rate struct {
+	Date  string  `json:"date"`
+	Base  string  `json:"base"`
+	Quote string  `json:"quote"`
+	Rate  float64 `json:"rate"`
+}
